# StaticScan

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile
include/: format_string.hpp  parse.hpp  scan.hpp  types.hpp
tests/: main.cpp
